# aihm_back

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  verify_imports.py
.github/workflows/: ci.yml  deploy.yml  test.yml
alembic/: README.md  env.py
alembic/archive/: 86a6daed18d1_candidate_position_id_nullable.py  90bc97d75861_add_webhook_subscriptions.py  96aab1dc0bfa_initial_schema.py  README.md  a1b2c3d4e5f6_add_enterprise_and_offer.py  a1b2c3d4e5f6_add_feedback_and_anonymization.py  add_rls_policies.py  (+13 more)
app/: main.py
docs/: NOTIFICATIONS.md
scripts/: audit_schema.py  backup.sh  init_db.py  seed.py  seed_demo.py  seed_fixtures.py  seed_rich.py
tests/: conftest.py  conftest_mocks.py  test_ai_transparency.py  test_analytics.py  test_api_analytics_advanced.py  test_api_calendar.py  test_api_enterprises.py  test_api_integrations.py  test_api_metrics.py  test_api_notifications.py  test_api_offers.py  test_api_pipeline.py  test_api_psychometrics.py  test_api_reports.py  test_api_skills.py  test_api_sourcing.py  test_api_tasks.py  test_api_webhooks.py  test_api_webhooks_config.py  test_applications.py  test_audit.py  test_auth.py  test_auth_extended.py  test_batch_matching.py  test_bulk_import.py  test_candidate_summary.py  test_candidates.py  test_candidates_extended.py  test_consent.py  test_cv_scoring.py  test_enterprises.py  test_feature_flags.py  test_gdpr.py  test_integration_complete_flow.py  test_interviews.py  test_module_features.py  test_offers.py  test_position_urgency.py  test_positions.py  test_positions_bulk.py  (+13 more)
(+217 files in other folders)
